--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,15 +1,45 @@
-.cardProduct{
-    border: 1px solid #f5f5f5;
-    
+.card {
+    border: 1.5px solid #f5f5f5;
 }
-.cardCartBtn {
 
+.cardImageBox {
+    background-color: #f7f7f788;
     width: 100%;
-    margin-top: 8px;
-    border-radius: 10px;
-    background-color: rgba(96, 165, 250, 0.938);
-    color: white;
-    font-weight: 500;
+    max-height: 450px;
+    border-bottom: 1px solid #f5f5f5;
+    padding: 0.8em;
+}
+
+.cardImage {
+    object-fit: contain;
+    width: 15em;
+}
+
+.cardDetail {
+    padding: 1.5em 0.5em;
+    width: 100%;
+    height: 100%;
+}
+
+.cardName {
+    text-align: left;
+    font-weight: 400;
     font-size: 1.1rem;
-    padding: 10px 10px;
+}
+
+.cardPriceBox {
+    padding-top: 0.5em;
+    margin-top: 10px;
+    width: 100%;
+    justify-content: space-between;
+}
+
+.cardPrice {
+    text-align: left;
+    font-weight: 500;
+    font-size: 1.2rem;
+}
+
+.cardWish {
+    color: #ff3f6c;
 }
