--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -1,9 +1,11 @@
 /* Navbar */
 .navbar {
-    padding: 20px 20px;
-    position: relative;
-    background-color: rgb(96 165 250 / 28%);
+    padding: 15px 20px;
     justify-content: space-between;
+    background-color: #364354;
+    color: white;
+    font-weight: 600;
+
 }
 
 /* Navbar Left */
@@ -24,9 +26,18 @@
     margin: 0;
     font-size: 1.4rem;
 }
-
+@media(max-width: 350px) {
+    .navTitle {
+      font-size: 1rem;
+    }
+    .navbarUser,.navbarOrder {
+        padding: 5px;
+        font-size: 0.8rem;
+    }
+}
 .navLists {
     margin: 0;
+    margin-left: 20px;
 }
 
 @media(max-width: 700px) {
@@ -39,14 +50,13 @@
 
 .navList {
     padding: 5px;
-    font-weight: 500;
     margin-right: 15px;
     list-style: none;
 }
 
 /* Navbar Right */
 .navbarRight {
-    font-weight: 500;
+    font-weight: 600;
 }
 
 .navbarUser {
@@ -63,16 +73,28 @@
 /* Sidebar */
 .navbarSidebar {
     overflow-y: scroll;
-    padding: 12vh 0;
-    transition: all 0.4s ease;
+    padding: 19vh 0;
     background-color: white;
+    width: 60vw;
+    height: 100vh;
+    position: relative;
+    transition: all 0.4s ease;
     position: fixed;
     top: 0;
     left: 0;
-    width: 300px;
-    z-index: 100;
-    width: 60vw;
+    z-index: 10;
+    transition: all 500ms ease;
+    color: black;
+}
+
+.navbarSidebarBackground {
+    position: fixed;
+    right: 0;
+    top: 0;
+    background-color: rgba(0, 0, 0, .8);
+    width: 100vw;
     height: 100vh;
+    z-index: 8;
 }
 
 .navbarClose {
@@ -84,11 +106,19 @@
     font-size: 2rem !important;
 }
 
+.navbarSidebar ul {
+    list-style: none;
+    margin: 0;
+    padding: 0px 3em;
+    width: fit-content;
+}
+
 .navbarSidebar ul li {
     cursor: pointer;
     text-align: left;
     list-style: none;
 }
+
 
 .navbarSidebar ul li p {
     margin: 35px 0;
