--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,24 +1,28 @@
 .card {
     border: 1.5px solid #f5f5f5;
+    max-height: 450px;
 }
 
 .cardImageBox {
-    background-color: #f7f7f788;
+    /* background-color: #f7f7f788; */
     width: 100%;
-    max-height: 450px;
+    max-height: 400px;
     border-bottom: 1px solid #f5f5f5;
-    padding: 0.8em;
 }
 
 .cardImage {
     object-fit: contain;
     width: 15em;
+    height: 15em;
 }
 
 .cardDetail {
-    padding: 1.5em 0.5em;
+    padding: 1.5em 0.6em;
+    padding-top: 1em;
     width: 100%;
-    height: 100%;
+    height: 200px;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .cardName {
@@ -34,10 +38,16 @@
     justify-content: space-between;
 }
 
+.cardCurrency {
+    height: 100%;
+    font-size: 1rem;
+    font-weight: 400;
+}
+
 .cardPrice {
     text-align: left;
     font-weight: 500;
-    font-size: 1.2rem;
+    font-size: 1.3rem;
 }
 
 .cardWish {
