--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -48,11 +48,12 @@
 }
 
 @media(max-width: 700px) {
-    .navLists {
+    .navLists, .navbarOrder{
         margin: 0;
         display: none !important;
 
     }
+    
 }
 
 .navList {
