--- a/src/components/loader/loader.css
+++ b/src/components/loader/loader.css
@@ -1,17 +1,89 @@
-.fallback-spinner {
+.loader {
+  margin-top: 5em;
+  width: 96px;
+  height: 48px;
+  display: inline-block;
   position: relative;
-  display: flex;
-  height: 100vh;
-  width: 100%;
-}
-.loading {
-  position: absolute;
-  left: calc(50% - 35px);
-  top: 50%;
-  width: 55px;
-  height: 55px;
-  border-radius: 50%;
-  -webkit-box-sizing: border-box;
+  background: #36435475;
+  border-radius: 48px 48px 0 0;
   box-sizing: border-box;
-  border: 3px solid transparent;
+  overflow: hidden;
+}
+
+.loader::after {
+  content: '';
+  box-sizing: border-box;
+  position: absolute;
+  width: 24px;
+  height: 12px;
+  border-radius: 24px 24px 0 0;
+  background: #FF3D00;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 0;
+}
+
+.loader::before {
+  content: '';
+  position: absolute;
+  width: 4px;
+  height: 32px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  bottom: 0;
+  background: #FF3D00;
+  transform-origin: 50% 100%;
+  box-sizing: border-box;
+  animation: animloader 2s linear infinite alternate;
+}
+
+@keyframes animloader {
+  0% {
+    transform: rotate(-70deg);
+  }
+
+  10% {
+    transform: rotate(-40deg);
+  }
+
+  20%,
+  45%,
+  35% {
+    transform: rotate(-10deg);
+  }
+
+  40%,
+  30% {
+    transform: rotate(-30deg);
+  }
+
+  50%,
+  60% {
+    transform: rotate(20deg);
+  }
+
+  55%,
+  65%,
+  75% {
+    transform: rotate(40deg);
+  }
+
+  70% {
+    transform: rotate(45deg);
+  }
+
+  85%,
+  90% {
+    transform: rotate(50deg);
+  }
+
+  95% {
+    transform: rotate(75deg);
+  }
+
+  100%,
+  93% {
+    transform: rotate(70deg);
+  }
 }
