--- a/src/components/navbar/navbar.css
+++ b/src/components/navbar/navbar.css
@@ -19,10 +19,6 @@
     cursor: pointer;
     display: none !important;
     font-size: 1.8rem !important;
-
-    @media(max-width: 700px) {
-        display: block !important;
-    }
 }
 
 .navTitle {
@@ -48,12 +44,16 @@
 }
 
 @media(max-width: 700px) {
-    .navLists, .navbarOrder{
+
+    .navLists,
+    .navbarOrder {
         margin: 0;
         display: none !important;
-
     }
-    
+    .navbarBurger {
+        display: block !important;
+    }
+
 }
 
 .navList {
@@ -76,11 +76,15 @@
     margin: 0 15px;
 }
 
-.navbarCart {}
+.navbarCart {
+    padding: 5px;
+    font-size: 2rem !important;
+}
 
 /* Sidebar */
 .navbarSidebar {
     overflow-y: scroll;
+    overflow-x: hidden;
     padding: 19vh 0;
     background-color: white;
     width: 60vw;
@@ -91,7 +95,7 @@
     top: 0;
     left: 0;
     z-index: 10;
-    transition: all 500ms ease;
+    transition: all 400ms ease;
     color: black;
 }
 
